# lvau

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ja.md  SECURITY.md  build.ps1
.cargo/: audit.toml
.github/: AGENTS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security.md
.github/workflows/: ci.yml  deploy-lvau-api.yml  publish-v050.yml  release.yml  rust.yml  security.yml  v050-bootstrap.yml  v050-diagnostics.yml  v050-fix.yml  verify-v050-release.yml
crates/lvau-api/: Cargo.toml
crates/lvau-api/src/: main.rs  routes.rs  transport.rs
crates/lvau-cli/: Cargo.toml
crates/lvau-cli/src/: main.rs  output.rs
crates/lvau-cli/tests/: cli.rs
crates/lvau-core/: AGENTS.md  Cargo.toml
crates/lvau-core/src/: bundle.rs  bundle_stream.rs  diff.rs  groups.rs  lib.rs  policy.rs  preflight.rs  recovery.rs  redundancy.rs  release.rs  report.rs  signing.rs
crates/lvau-core/src/crypto/: framing.rs  key_schedule.rs  keys.rs  lco.rs  mod.rs  parallel.rs  password.rs  suite.rs  tests.rs
crates/lvau-core/tests/fixtures/: v0_3_password.lvau.b64
crates/lvau-gui/: Cargo.toml
crates/lvau-gui/src/: main.rs  main.rs.new
crates/lvau-protocol/: Cargo.toml
crates/lvau-protocol/src/: envelope.rs  lib.rs
crates/lvau-stub/: Cargo.toml
crates/lvau-stub/src/: main.rs  main.rs.new
deploy/: lvau-api.env.example  lvau-api.service  nginx-lvau-api.conf  nginx-lvau-limits.conf
docs/: APPROVALS.md  CAPSULE_POLICY.md  DEPLOYMENT.md  DIFFERENTIATION.md  FORMAT.md  JSON_OUTPUT.md  LAUNCH_POSTS.md  PREFLIGHT.md  RECIPIENT_GROUPS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  THREAT_MODEL.md  V0_1_0_RELEASE_NOTES_DRAFT.md  V0_2_0_RELEASE_NOTES.md  V0_3_0_RELEASE_NOTES.md
docs/plans/: 2026-07-15-v0.4.0-hardening-design.md  2026-07-15-v0.4.0-hardening-plan.md
examples/basic-roundtrip/: README.md  run.ps1  run.sh
frontend/: vercel.json
frontend/src/components/: LvauWeb.css  LvauWeb.tsx
lattes.jp-master/lattes.jp-master/: .env.example  .gitignore  .npmrc  README.md  design-qa.md  index.html  package-lock.json  package.json  vercel.json
lattes.jp-master/lattes.jp-master/api/: usage.js
lattes.jp-master/lattes.jp-master/api/billing/: checkout.js  portal.js  session.js  webhook.js
lattes.jp-master/lattes.jp-master/api/v1/: transform.js
lattes.jp-master/lattes.jp-master/server/: apiKeys.js  http.js  redis.js  stripe.js  transforms.js
lattes.jp-master/lattes.jp-master/src/: App.jsx  main.jsx  styles.css
lattes.jp-master/lattes.jp-master/src/components/: AdSlot.jsx  ApiProSection.jsx  LvauWeb.jsx  SiteHeader.jsx
lattes.jp-master/lattes.jp-master/src/lib/: usage.js
lattes.jp-master/lattes.jp-master/src/pages/: HomePage.jsx  LvauPage.jsx  ToolboxPage.jsx
lattes.jp-master/lattes.jp-master/tests/: api-guards.test.js  transforms.test.js
schemas/: lvau-cli-output-v1.schema.json
scripts/: deploy_oracle_lvau_api.sh  v050_crypto_refactor.py  v050_docs.py  v050_fix_ci.py  v050_fix_windows.py  v050_migrate.py
scripts/windows/: install-context-menu.ps1  lvau-context.ps1  uninstall-context-menu.ps1
