[package]
name = "lvau-api"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "timeout", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
secrecy = "0.8"
zeroize = "1.7"
anyhow = "1.0"
thiserror = "1.0"
lvau-core = { path = "../lvau-core" }
lvau-protocol = { path = "../lvau-protocol" }


subtle = "2.5"
lazy_static = "1.5"

