[package]
name = "lvau-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lvau-core = { path = "../lvau-core" }
lvau-protocol = { path = "../lvau-protocol" }
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.2"
secrecy = "0.8"
log = "0.4.33"
env_logger = "0.11.11"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
