[package]
name = "lvau-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lvau-protocol = { path = "../lvau-protocol" }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.13"
log = "0.4.21"
rand = "0.8.5"
secrecy = "0.8.0"
zeroize = "1.8.1"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
sha2 = "0.11"
kem = "0.3.0"
generic-array = "0.14"
rayon = "1.12.0"
