[package]
name = "lvau-core"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
lvau-protocol = { path = "../lvau-protocol" }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.13"
log = "0.4.21"
rand = "0.9.4"
secrecy = "0.10.3"
zeroize = "1.8.1"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
x25519-dalek = { version = "3.0.0", features = ["static_secrets", "getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2.0"
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = "0.11"
kem = "0.3.0"
generic-array = "0.14"
rayon = "1.12.0"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
walkdir = "2.5"
toml = "1.1"
blahaj = "0.6.0"
tempfile = "3.10"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Security", "Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_Security_Authorization", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
